--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2379,5 +2379,139 @@ padding: 5px 22px;border-radius: 6px;
   text-align: center;
   color: #FFFFFF;
 }
-
  /* profile pege  end css */
+ /* editprofile area start css */
+.editprofile-area{
+  background: #ffffff;
+  padding: 30px;
+  border-radius: 20px;
+  margin-top: 30px;
+}
+.editprofile-area h2{
+  font-size: 20px;
+  font-weight: 600;
+  color: #293033;
+  margin-bottom: 30px;
+}
+.photo-up{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+.photo-up img{
+  width: 150px;
+  height: 150px;
+  border-radius: 100px;
+  margin-right: 30px;
+}
+
+.upload-btn-wrapper {
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+}
+.up-btn {
+  padding: 13px 30px;
+  border-radius: 8px;
+  color: #FFFFFF;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 500;
+  text-align: center;
+  background: #24B29B;
+  border: none;
+}
+.up-btn.up-delete{
+  color: #24B29B;
+  background: #E9F5F3;
+}
+.upload-btn-wrapper input[type=file] {
+  font-size: 100px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+}
+.personal-item{
+  margin-top: 25px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.personal-wrap {
+  flex-direction: column;
+  display: flex;
+  width: 32.3%;
+  margin-bottom: 20px;
+}
+.personal-wrap .personal-title{
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 400;
+  color: #454A4D;
+}
+.personal-wrap .personal-text{
+  color: #8A9499;
+  font-family: Poppins;
+  font-size: 16px;
+  font-weight: 500;
+  padding: 15px 20px;
+  border: 1px solid #D7DADB;
+  border-radius: 12px;
+}
+.personal-wrap .personal-text:focus{
+  outline: none;
+}
+.introduc-area{}
+.introduc-area h4{
+  font-size: 16px;
+  font-weight: 400;
+  color: #454A4D;
+}
+.introduc-area p{
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 26px;
+  color: #8A9499;
+  padding: 15px 20px 48px 20px;
+  border-radius: 20px;
+  border: 1px solid #D7DADB
+}
+.create-pass{}
+.create-pass h2{
+  font-size: 20px;
+  font-weight: 600;
+  color: #293033;
+  padding-bottom: 7px;
+  border-bottom: 1px solid#F0F1F2;
+  margin-bottom: 25px;
+}
+.insurance-item {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.insurance-item .personal-wrap{
+  width: 24%;
+}
+.save-btn {
+  display: flex;
+  justify-content: end;
+}
+.save-btn .save-chang {
+  font-family: Poppins;
+  font-size: 18px;
+  font-weight: 600;
+  text-align: center;
+  color: #FFFFFF;
+  background: #00AAFF;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 12px;
+  cursor: pointer;
+}
+
+
+
+
+ /* editprofile area end css */
