--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2243,35 +2243,40 @@ padding: 5px 22px;border-radius: 6px;
   color: #1F991F;
   background: #D7FCD7;
 }
-.appointment-tabel.profile-payment .appointment-table tbody tr td i{
-  margin-left: 15px;
-  color: #5C6266;
-}
-
 .compl-btn.view-payment{
   background: #00AAFF;
   color: #F3F3F3;
+}
+.appointment-tabel.profile-payment .table-responsive{
+  overflow: unset;
+}
+.view-payment-wepr{
+  color: #5C6266;
+  position: relative;
   cursor: pointer;
 }
-.view-payment-item {
-  position: absolute;
-  bottom: -84px;
-  right: 78px;
-  background: #FFFFFF;
-  width: 185px;
-  height: 150px;
-  border-radius: 10px;
-  box-shadow: 0px 5px 30px rgba(0, 68, 102, 0.1);
-  padding: 10px 7px;
-  opacity: 0;
-  visibility: hidden;
-  transition: .4s ease-in-out;
-}
-.view-payment-item.view-payment-active{
+
+.view-payment-wepr:hover .view-payment-item{
   opacity: 1;
   visibility: visible;
 }
+
+.view-payment-item {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background: #FFFFFF;
+  border-radius: 10px;
+  box-shadow: 0px 5px 30px rgba(0, 68, 102, 0.1);
+  padding: 10px 7px;
+  opacity: 0; 
+  visibility: hidden;
+  transition: .4s ease-in-out;
+  z-index: 11;
+}
+
 .view-payment-item li{
+  width: 160px;
   border-radius: 5px;
   padding: 5px 12px;
   margin: 6px 0;
@@ -2281,6 +2286,7 @@ padding: 5px 22px;border-radius: 6px;
   font-weight: 400;
   cursor: pointer;
   transition: .4s ease-in-out;
+  
 }
 .view-payment-item li:hover{
   background: #F2F6F7;
@@ -2366,12 +2372,13 @@ padding: 5px 22px;border-radius: 6px;
   font-size: 15px;
   font-weight: 500;
 }
-.mycomplain .complain-btn{
+.mycomplain .complain-btn {
   margin-top: 25px;
   border: none;
-  background: #00AAFF;  
+  background: #00AAFF;
   border-radius: 12px;
   width: 290px;
+  width: 100%;
   padding: 14px 30px;
   font-family: Poppins;
   font-size: 18px;
@@ -2458,6 +2465,15 @@ padding: 5px 22px;border-radius: 6px;
   padding: 15px 20px;
   border: 1px solid #D7DADB;
   border-radius: 12px;
+}
+.personal-wrap.show-hide{
+  position: relative;
+}
+.checkbox-icon {
+  position: absolute;
+  right: 14px;
+  top: 53px;
+  color: #8A9499;
 }
 .personal-wrap .personal-text:focus{
   outline: none;
